2007-12-12  Bastien Nocera  <hadess@hadess.net>

	* en_GB.pl: Only translate counterclockwise when in en_GB,
	same thing for the Klondike/Canfield solitaire games
	(Closes: #490519)

2007-12-12  Bastien Nocera  <hadess@hadess.net>

	* en_GB.pl: Make the en_GB specific translations work again,
	Perl != Python!
	We don't handle multiple words, so fix the Super NES translation

2007-12-12  Bastien Nocera  <hadess@hadess.net>

	* en_GB.pl: Translate Genesis and SuperNES in en_GB locales

2007-10-22  Bastien Nocera  <hadess@hadess.net>

	* en_GB.pl: Add some solitaire game names as per the bug
	(Closes: #444409)

2007-10-22  Bastien Nocera  <hadess@hadess.net>

	* en_GB.pl: Add ability to specific contexts for the
	translations, to hopefully help translate confusing strings
