@@ -1,3 +1,9 @@
+2007-12-19  Bastien Nocera  <hadess@hadess.net>
+
+	* en_GB.pl: Use strict and warnings,
+	Fix warnings, and restrict variables to their use
+	Handle plurals!
+
 2007-12-12  Bastien Nocera  <hadess@hadess.net>
 
 	* en_GB.pl: Only translate counterclockwise when in en_GB,
